# words-lingo

./: .gitignore  Cargo.toml
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20250107_193112_create_words_table.rs  m20250107_193113_create_users_table.rs  m20250112_172322_create_user_word_progress_table.rs  m20250112_185317_create_content_table.rs  m20250112_190406_create_sentences_table.rs  m20250112_190954_create_sentence_words_table.rs  main.rs  word_seed.rs
seed/: Cargo.toml
seed/src/: lib.rs  main.rs
seed/src/seeds/: mod.rs  user.rs  word.rs
src/: lib.rs  main.rs  routes.rs
src/entity/: content.rs  mod.rs  post.rs  prelude.rs  sea_orm_active_enums.rs  sentence.rs  sentence_word.rs  user.rs  user_word_progress.rs  word.rs
src/routes/: hello_routes.rs  mod.rs  words_routes.rs  works_routes.rs
tests/: database_test.rs  words_test.rs
