[package]
name = "words_lingo"
version = "0.1.0"
edition = "2021"

[workspace]

members = [
    "migration",
]

[dependencies]
ntex = { version = "2.0", features = ["tokio"] }
sea-orm = { version = "1.1.0", features = ["sqlx-mysql", "runtime-tokio-native-tls", "macros", "debug-print"] }
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15.0"
