[package]
name = "seed"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "seed"
path = "src/main.rs"

[dependencies]
sea-orm = { version = "1.1.0", features = ["sqlx-mysql", "runtime-tokio-native-tls"] }
words_lingo = { path = ".." }
dotenv = "0.15.0"
async-std = { version = "1", features = ["attributes", "tokio1"] }
clap = { version = "4.5.0", features = ["derive"] }
async-trait = "0.1.0"
chrono = "0.4"
